@@ -200,6 +200,7 @@ struct smscconn {
     int reroute;                /* simply turn MO into MT and process internally */
     Dict *reroute_by_receiver;  /* reroute receiver numbers to specific smsc-ids */
     Octstr *reroute_to_smsc;    /* define a smsc-id to reroute to */
+    int reroute_dlr;            /* should DLR's are rereouted too? */
 
 
     /* XXX: move rest global data from Smsc here
