@@ -288,6 +288,7 @@ MULTI_GROUP(smsc,
     OCTSTR(reroute)
     OCTSTR(reroute-smsc-id)
     OCTSTR(reroute-receiver)
+    OCTSTR(reroute-dlr)
     OCTSTR(log-file)
     OCTSTR(log-level)
     OCTSTR(our-host)
